# shapeme

./: .editorconfig  .gitignore  .pre-commit-config.yaml  AGENTS.md  Cargo.toml  LICENSE  README.md  mise.toml
.cargo/: config.toml
.github/workflows/: rust.yml
.mise/completions/fish/: shapeme.fish
.mise/tasks/: build-release  run-release
libshapeme/: Cargo.toml
libshapeme/src/: annealing.rs  gene.rs  genome.rs  grid.rs  lib.rs  oklab.rs  render.rs  shapes.rs  svg.rs
shapeme/: Cargo.toml
shapeme/src/: main.rs
src/: annealing.rs  io.rs  main.rs  render.rs  shapes.rs
