[workspace]
members = ["libshapeme", "shapeme"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "BSD-2-Clause"
authors = ["Andrew Aylett <andrew@aylett.co.uk>"]
repository = "https://github.com/andrewaylett/shapeme"

[workspace.lints.rust]
dead_code       = "deny"
missing_docs    = "deny"
unreachable_pub = "warn"
unused_imports  = "deny"

[workspace.lints.clippy]
# Lint groups (lower priority so individual overrides take effect)
all      = { level = "deny", priority = -3 }
pedantic = { level = "deny", priority = -2 }
nursery  = { level = "deny", priority = -1 }
# Selected restriction lints
allow_attributes_without_reason = "deny"
unwrap_used                      = "deny"
# Project-wide allowances
missing_panics_doc      = "allow"  # stubs use todo!() which panics; revisit once implemented
module_name_repetitions = "allow"  # conventional for re-exported types (e.g. dkim::DkimSignature)
wildcard_imports        = "allow"  # idiomatic in test modules (use super::*)
# Graphics/rasterisation math: deliberate numeric conversions are pervasive
cast_precision_loss      = "allow"
cast_possible_truncation = "allow"
cast_sign_loss           = "allow"
cast_possible_wrap       = "allow"
cast_lossless            = "allow"
# Rasterisation-loop style conventions
many_single_char_names   = "allow"  # r, g, b colour components use conventional short names
while_float              = "allow"  # triangle rasteriser uses float loop counters
suboptimal_flops         = "allow"  # explicit multiply-add is clearer than mul_add in graphics code
missing_const_for_fn     = "allow"  # not every potentially-const function benefits from being const
useless_let_if_seq       = "allow"  # named bindings aid readability in multi-step initialisations
too_many_lines           = "allow"  # some functions (main, mutate_shapes) are necessarily long
redundant_pub_crate      = "allow"  # pub(crate) preferred for crate-internal items

[workspace.dependencies]
image = "0.25"
rand = "0.9"
rayon = "1"
serde = { version = "1", features = ["derive"] }
bincode = { version = "2", features = ["serde"] }
tracing = "0.1"
