[package]
name = "shapeme"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Approximate images with triangles/circles via simulated annealing"

[lints]
workspace = true

[dependencies]
libshapeme = { path = "../libshapeme" }
image = { workspace = true }
rand = { workspace = true }
rayon = { workspace = true }
serde = { workspace = true }
bincode = { workspace = true }
tracing = { workspace = true }
sdl2 = { version = "0.38", features = ["bundled", "static-link", "unsafe_textures"] }
clap = { version = "4", features = ["derive"] }
clap_complete = { version = "4" }
anyhow = "1"
tracing-subscriber = "0.3"
